V2 site/style.css
/* ... */
.menu ul li a:hover
{
  color: #1C97CA;
}

#l2{
  width: 620px;
  margin-left: 20px;
}

#l3{
  width: 620px;
  margin-left: 23px;
}

.l2{
  text-align: left;
}

.l3{
  text-align: left;
}

.banner
{
  /*background: url(images/picjumbo-bg5.png) no-repeat fixed 30% 0%/cover;*/
  background: url(images/happyman-1.jpg) no-repeat fixed 30% 0%/cover;
  padding: 90px 0px;
  cursor: default;

}
  .banner .bloco-destaque {
    width: 100%;
    color: #fff;
    padding-top: 200px;
    text-align: center;
    /*text-shadow: 1px 1px 1px rgba(0,0,0,.5);*/
    font-family: 'Open Sans', 'Raleway', sans-serif;

  }
    .banner .bloco-destaque .l1 {
      font-size: 32px;

    }
      .banner .bloco-destaque .l1 span { color: #00ccea }
    .banner .bloco-destaque .l2 {
      font-size: 50px;
      font-family: 'Open Sans', 'Raleway', sans-serif;
    }
    .banner .bloco-destaque .l3 {
      font-size: 25px;
      font-family: 'Open Sans', 'Raleway', sans-serif;
    }
    .p1 {
          font-size: 20px;
          padding: 16px 0px 0px 0px;
    }
    .banner .bloco-destaque .botoes {
      margin: 20px;
      font-family:  'Open Sans', 'Raleway', sans-serif;
      overflow: hidden;
    }

    .banner .bloco-destaque a.button {
      display: inline-block;
      text-decoration: none;
      padding: 16px;
      border-radius: 20px;
      margin-bottom: 16px;
      font-family: 'Open Sans', 'Raleway', sans-serif;
      color: white;
      width: 30%;
      margin: 20px 0px 0px 0px;
      float: none;
      transition: background 0.2s, color 0.2s;
 
    }

    #want-a-discount--button{
      color: #00ccea;
      float: left;
    }

    #want-a-discount--button:hover{
      color: #ffffff;
      /*border: 1px solid #f2f2f2;*/
    }

    a.button.full{
      padding: 16px 72px !important;
      font-size: 16px;
      background-color: #f2f2f2;
      border: 1px solid #FF9735;
      transition-duration: 0.1s;
      transition: all 0.2s, color 0.2s;
      animation: all spinAround 2s linear infinite;
    }

    a.button.full:hover {
      background-color: #FF9735;
      color: #ffffff;
      text-shadow: 1px 1px 1px rgba(0,0,0,.5);
      box-shadow:inset 0px 0px 0px 2px #00ccea;
      border: 1px solid #f2f2f2;
    }

.banner2
{
  background: url(images/bg2.png) no-repeat fixed 30% 10%/cover;
  cursor: default;

}

.header-text
{
  text-align:center;
  color: #fff;
  text-align: right;
}

.header-text2
{
  text-align:center;
  color: #fff;
  font-size: 40px;
    font-weight: 600;
    font-family: 'Open Sans', 'Raleway', sans-serif;
    line-height: 60px;
    
}


.big-text
{
  font-size: 30px;
  line-height: 50px;
  font-family: 'Open Sans', 'Raleway', sans-serif;
  font-weight: 300;
  padding-right: 15%
}
.header-text h2
{
  font-size: 40px;
  font-weight: 600;
  font-family: 'Open Sans', 'Raleway', sans-serif;
  line-height: 60px;
  padding-right: 13%;
}
.small-text
{
    text-align: center;
    margin: 10px 0 0 60%;
    font-size: 18px;
    font-family: 'Open Sans', 'Raleway', sans-serif;
    font-weight: 400;
    line-height: 40px;
    padding: 17px 40px 0px 0px;
    width: 400px;
}
}
.small-text a
{
  color: #fff;
  border-bottom: 1px dotted #fff;
  text-decoration: none;
}
.button-section ul li
{
  display: inline-block;
  margin: 50px 20px;
}

a.button.button-left {
    border: 1px solid #fff;
    padding: 16px 72px !important;


}

a.button.button-right {
    border: 1px solid #fff;
    padding: 16px 72px !important;
}

a.button.button-right:hover {
    background-color: #1d3c70;
    border: 1px solid #1d3c70;
    box-shadow:inset 0px 0px 0px 1px #1d3c70;
}

a.button.button-left:hover{
     background-color: #1d3c70;
     border: 1px solid #1d3c70;
     box-shadow:inset 0px 0px 0px 1px# 1d3c70;

}

.top-button
{

  text-decoration: none;
  border-radius: 25px;
  font-family: 'Open Sans', 'Raleway', sans-serif;
  font-weight: 600;
  font-size: 12px;
  text-transform: uppercase;

}

.green
{	color: #fff;
  padding: 17px 70px;
  background-color: #00adee;
}
.white
{
  background-color: #fff;
  padding: 17px 180px;
  color: #4e4f4f;
}

.white:hover
{
  color: white;
  box-shadow: 0 0 0 3px white inset;
  background-color: rgba(0,0,0,0.0)
}
.green:hover
{

  box-shadow: 0 0 0 3px white inset;
  background-color: rgba(0,0,0,0.0);
}

.textim{
  padding-top: 15px;
  text-align: center;
    color: #fff;
    font-size: 15px;
    line-height: 20px;
    width: 90%;
    margin: 0 auto;
    font-weight: 400;
    font-family: 'Open Sans', sans-serif;;
}

.titulozim{
  padding: 30px 0px 300px 0px;
}
.color-border
{
  background:url(images/color_border.jpg) repeat-x scroll center top;
  width: 100%;
  float: left;
  display: block;
  height: 5px;
}
.features
{
  background: url(images/bg.png) repeat;
}
.features2
{
  background: url(images/bg.png) repeat;
}
.desc
{
  font-family: 'Open Sans', 'Raleway', sans-serif;
  text-align: center;
  padding: 80px 0px;
}
.desc h2
{
  font-size: 30px;
  font-weight: 600;
  padding: 0px 0px 15px 0px;
  color: #00aeef;
}
.desc p
{
  font-size: 18px;
  font-weight: 400;
  line-height: 30px;
  width: 85%;
  margin: 0 auto;
  font-family: 'Open Sans', sans-serif;
  color: #aab1bf;
}
.desc2
{
  font-family: 'Open Sans', 'Raleway', sans-serif;
  text-align: center;
  padding: 49px 0px 70px 0px;
  background-image: url("images/bgbadge.png");
  background-color: #cccccc;
}
.desc2 h2
{
  font-size: 30px;
  font-weight: 600;
  padding: 0px 0px 15px 400px;
  color: #00aeef;
}
.desc2 p {
    text-align: left;
    font-size: 18px;
    font-weight: 400;
    line-height: 30px;
    width: 50%;
    margin: 25px 43px 0px 493px;
    font-family: 'Open Sans', sans-serif;
    color: #aab1bf;
  }

  img.badge{
    float:left;
    margin-top: -50px;
  }

@media(max-width: 1000px) {
  .desc2 p {
    margin: 0 0 0 0;
    width: 100%;
    text-align: center;
  }

  .desc2 h2 {
    padding: 0;
    margin: 0 0 20px 0;
  }

  .badge {
    display: none;
  }
}
/* ... */

